--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
     "component",
     "asset"
   ],
-  "time": "2021-08-11",
+  "time": "2022-03-30",
   "license": "MIT",
   "authors": [
     {
@@ -18,6 +18,7 @@
   "require": {
     "php": "^7.4 || ^8.0",
     "ext-json": "*",
+    "guzzlehttp/guzzle": "^7.4",
     "matthiasmullie/minify": "^1.3",
     "pollen-solutions/event": "^1.0",
     "pollen-solutions/http": "^1.0",
